--- a/order-dev.yml
+++ b/order-dev.yml
@@ -6,7 +6,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
   rabbitmq:
-    host: http://47.105.218.58
+    host: 47.105.218.58
     port: 5672
     username: admin
     password: admin
