--- a/product-dev.yml
+++ b/product-dev.yml
@@ -8,5 +8,5 @@ spring:
   rabbitmq:
     host: 47.105.218.58
     port: 5672
-    username: admin
-    password: admin
+    username: guest
+    password: guest
