--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,5 +10,5 @@ spring:
     port: 5672
     username: guest
     password: guest
-    publisher-confirms: true
-    virtual-host: /
+#    publisher-confirms: true
+#    virtual-host: /
