--- a/order-dev.yml
+++ b/order-dev.yml
@@ -55,6 +55,8 @@ spring:
 logging:
   level:
     com.cloud.product.mapper: debug
+
+# 负载均衡策略，默认使用轮询，shirt 双击，搜索 IRule ，配置其实现类
 PRODUCT:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
