--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,8 +10,8 @@ spring:
     port: 5672
     username: guest
     password: guest
-#    publisher-confirms: true
-#    virtual-host: /
+  #    publisher-confirms: true
+  #    virtual-host: /
   #开启消息跟踪
   cloud:
     bus:
@@ -25,12 +25,12 @@ spring:
         destination: rabbit-test
         content-type: application/json
         #分组:多实例下 不同的分组 相当于同一个应用的不同实例 通道 对应不同的队列
-        group: myorder1
+        group: myorder
       #绑定输出通道名·
       output:
         destination: rabbit-test
         conteny-type: aaplication/json
-        group: myorder1
+        group: myorder
 # stream 配置
 #    stream:
 #      binders:         # 在此处配置要绑定的rabbitmq的服务信息；
