--- a/order-dev.yml
+++ b/order-dev.yml
@@ -13,10 +13,10 @@ spring:
   #    publisher-confirms: true
   #    virtual-host: /
   #开启消息跟踪
-  cloud:
-    bus:
-      refresh:
-        enabled: true
+#  cloud:
+#    bus:
+#      refresh:
+#        enabled: true
   stream:
     bindings:
       # input 绑定通道 与接口中的通道相对应 解决多实例应用请求一个URL 造成所有的实例接收消息
