--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,6 +10,9 @@ spring:
     port: 5672
     username: guest
     password: guest
+  redis:
+    host: 47.105.218.58
+    port: 6379
   #    publisher-confirms: true
   #    virtual-host: /
   #开启消息跟踪
