--- a/get-away-dev.yml
+++ b/get-away-dev.yml
@@ -21,3 +21,10 @@ management:
     web:
       exposure:
         include: "*"
+
+spring:
+  rabbitmq:
+    host: 47.105.218.58
+    port: 5672
+    username: guest
+    password: guest
