--- a/get-away-dev.yml
+++ b/get-away-dev.yml
@@ -11,7 +11,7 @@ zuul:
       sensitiveHeaders:
     login:
       path: /login/**
-      serviceId: order
+      serviceId: user
       sensitiveHeaders:
     # 简洁写法,就是 product 服务可以，通过 /test/ 访问
     product: /test/**
@@ -25,6 +25,7 @@ management:
     web:
       exposure:
         include: "*"
+
 
 spring:
   rabbitmq:
