--- a/order-dev.yml
+++ b/order-dev.yml
@@ -13,6 +13,16 @@ spring:
   redis:
     host: 47.105.218.58
     port: 6379
+  zipkin:
+    base-url: http://47.105.218.58:9411/
+    sender:
+      type: web # 坑的东西
+  sleuth:
+    sampler:
+      probability: 1 # 默认只暴露 0.1 的数据请求,开发设置为1
+    http:
+      legacy:
+        enabled: true
   #    publisher-confirms: true
   #    virtual-host: /
   #开启消息跟踪
@@ -56,11 +66,42 @@ spring:
 #          destination: streamExchange     # 表示要使用的Exchange名称定义
 #          content-type: application/json  # 设置消息类型，本次为对象json，如果是文本则设置“text/plain”
 #          binder: defaultRabbit           # 设置要绑定的消息服务的具体设置
-logging:
-  level:
-    com.cloud.product.mapper: debug
 
 # 负载均衡策略，默认使用轮询，shirt 双击，搜索 IRule ，配置其实现类
 PRODUCT:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  server:
+    port: 8081 #actuator端口
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 16000
+    listFor:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 16000
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 16000
+        readTimeout: 26000
+        loggerLevel: basic
+
+logging:
+  level:
+    com.cloud.product.mapper: debug
+    org.springframework.cloud.openfeign: debug
