--- a/product-dev.yml
+++ b/product-dev.yml
@@ -12,3 +12,17 @@ spring:
     password: guest
 #    publisher-confirms: true
 #    virtual-host: /
+  zipkin:
+    base-url: http://47.105.218.58:9411/
+    sender:
+      type: web # 坑的东西
+  sleuth:
+    sampler:
+      probability: 1 # 默认只暴露 0.1 的数据请求,开发设置为1
+    http:
+      legacy:
+        enabled: true
+
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
