--- a/user-dev.yml
+++ b/user-dev.yml
@@ -13,6 +13,16 @@ spring:
   redis:
     host: 47.105.218.58
     port: 6379
+  zipkin:
+    base-url: http://47.105.218.58:9411/
+    sender:
+      type: web # 坑的东西
+  sleuth:
+    sampler:
+      probability: 1 # 默认只暴露 0.1 的数据请求,开发设置为1
+    http:
+      legacy:
+        enabled: true
 logging:
   level:
     com.cloud.user.mapper: debug
